--- a/年度总结/2018.md
+++ b/年度总结/2018.md
@@ -87,3 +87,27 @@
 
 ## 展望2019
 
+### 生活上
+
+* 改掉晚睡晚起的坏习惯
+* 加强锻炼
+* 如果可能，购置新房
+
+### 工作上
+
+2018年在工作上很挫败，虽然每次都能按时按量完成工作任务，但是没有对公司做出过特别的贡献，希望在2019工作上能达到下面几个要求
+
+* 保持工作热情
+* 勤勤恳恳，踏踏实实
+* 多倾听，多思考，多沟通
+* 找出并解决项目的不足之处
+* 以负责人的身份审视所有项目
+* 对每次项目做出总结
+
+### 学习上
+
+* 踏上微信小程序的不归路
+* 完成webpack所有源码分析，提升自己的项目构建能力
+* 完成webgl剩余学习部分，并开发出几个开源作品
+* 深入学习c语言，为学习node源码助力
+* 深入学习数据结构及各种算法
