Add 2019 work plan

--- a/年度总结/2018.md
+++ b/年度总结/2018.md
@@ -91,23 +91,65 @@
 
 * 改掉晚睡晚起的坏习惯
 * 加强锻炼
-* 如果可能，购置新房
 
 ### 工作上
 
-2018年在工作上很挫败，虽然每次都能按时按量完成工作任务，但是没有对公司做出过特别的贡献，希望在2019工作上能达到下面几个要求
+2018年在工作上很挫败，虽然每次都能按时按质按量完成工作任务，但是一直都没有质的突破，希望在2019工作上能达到下面几个要求
 
-* 保持工作热情
-* 勤勤恳恳，踏踏实实
-* 多倾听，多思考，多沟通
-* 找出并解决项目的不足之处
-* 以负责人的身份审视所有项目
-* 对每次项目做出总结
+* 保持工作热情，勤勤恳恳，踏踏实实，多倾听，多思考，多沟通
+* 以负责人的身份审视所有项目，找出并解决项目的不足之处
+* 对每次项目开发做出总结
 
 ### 学习上
 
-* 踏上微信小程序的不归路
-* 完成webpack所有源码分析，提升自己的项目构建能力
-* 完成webgl剩余学习部分，并开发出几个开源作品
-* 深入学习c语言，为学习node源码助力
-* 深入学习数据结构及各种算法
+* 基础
+  1. 深入学习html
+      * 标签及其语义化
+      * 无障碍访问
+  2. 深入学习css
+      * 属性规则
+      * 渐变
+      * 动画
+      * 各种页面结构布局
+  3. 深入学习js
+      * 执行环境
+      * 作用域
+      * 闭包
+      * 原型
+      * 事件循环
+      * 执行原理
+  >技能项达到精通
+
+* 精通移动端开发  
+  1. H5
+  2. 微信小程序
+  3. React Native
+  4. 接触安卓,IOS开发
+  >能熟练开发移动端页面及应用
+
+* 源码分析
+  1. react
+  2. vue
+  3. webpack
+  >了解各个前端框架的原理及实现，能触类旁通
+
+* 数据可视化
+  1. css3
+  2. canvas
+  3. svg
+  4. webgl
+  5. d3
+  6. three
+  >熟练绘制各类图标，能结合数据结构将大数据进行可视化
+
+* 开发语言
+  1. C
+  2. Java/Scala
+  3. Python
+  >走出前端领域，学两门静态语言防身
+
+* 高级涉猎
+  1. 开发模式
+  2. 数据结构＋算法
+  3. AI
+  >提高大型软件开发能力
